--- a/css/base.css
+++ b/css/base.css
@@ -57,7 +57,6 @@ textarea,
 select,
 button {
 	font-size: 12px;
-	,
 	font-weight: normal;
 	vertical-align: middle;
 }
@@ -221,7 +220,7 @@ div {
 	behavior: url(js/background.htc);
 }
 
-.unfold img {
+img {
 	height: 1.66rem;
 	overflow: auto;
 	margin: auto;
